--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,12 @@ Thumbs.db
 *.mov
 *.wmv
 
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
