PG-13 Rename to service.product

--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>service.catalogue</name>
-	<comment>Project service.catalogue created by Buildship.</comment>
+	<name>service.product</name>
+	<comment>Project service.product created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
