--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ plugins {
     id "org.flywaydb.flyway" version "7.3.1"
 }
 
+mainClassName = 'service.product.ProductServiceServer'
+
 repositories {
     maven { // The google mirror is less flaky than mavenCentral()
         url "https://maven-central.storage-download.googleapis.com/maven2/" }
