--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,6 @@ services:
       - "5432:5432"
     volumes:
       - ./resources/db/scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
+
+volumes:
+  database-data: # named volumes can be managed easier using docker-compose
