--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,8 @@ dependencies {
     compile "org.flywaydb:flyway-core:${flywayVersion}"
     compile group: 'org.postgresql', name: 'postgresql', version: '42.2.18'
     compile group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
-    compile group: 'org.eclipse.persistence', name: 'eclipselink', version: '3.0.0'
+    compile group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.7.3'
+    compile group: 'org.eclipse.persistence', name: 'org.eclipse.persistence.jpa', version: '3.0.0'
 }
 
 protobuf {
