--- a/docker-compose-sanity.yml
+++ b/docker-compose-sanity.yml
@@ -19,4 +19,4 @@ services:
       - DATABASE_PASSWORD=tapp
       - DATABASE_TYPE=postgresql
       - FLYWAY_TASK=migrate
-      - DELAY_SLEEP_MILLISECOND=5000
+      - START_DELAY=5000
